--- a/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
@@ -69,8 +69,8 @@
     </div>
     <div class="filter-footer">
       <ul class="nav nav-toolbar">
-        <li class="nav-item width50">
-          <button (click)="isImageConfig=!isImageConfig" title="Close" id="btnCloseForm"
+        <li class="nav-item width50" (click)="isImageConfig=!isImageConfig">
+          <button title="Close" id="btnCloseForm"
                   class="btn-footer-fill btn-block rounded-0 height100">
             <span class="fa fa-close"></span>
           </button>
@@ -135,8 +135,8 @@
     </div>
     <div class="filter-footer">
       <ul class="nav nav-toolbar">
-        <li class="nav-item width50">
-          <button (click)="isVideoConfig=!isVideoConfig" title="Close" id="btnCloseForm" 
+        <li class="nav-item width50" (click)="isVideoConfig=!isVideoConfig">
+          <button  title="Close" id="btnCloseForm" 
                   class="btn-footer-fill btn-block rounded-0 height100">
             <span class="fa fa-close"></span>
           </button>
