--- a/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
@@ -51,12 +51,12 @@
       <div class="d-flex justify-content-center mb-0">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage"  (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
 
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
         <!-- Position Column -->
         <ng-container matColumnDef="name">
           <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -81,7 +81,7 @@
             Last Updated Date
           </th>
           <td mat-cell *matCellDef="let element">
-            {{element.LastUpdatedDate |date }}
+            {{element.LastUpdatedDate | date:"dd/MM/yyyy h:mm a"}}
           </td>
         </ng-container>
 
