--- a/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
@@ -27,7 +27,6 @@
   </div>
 
   <!--image config-->
-<form [formGroup]="ImageConfigForm" name="imgConfigform">
   <div class="form-popup side-popup width340" [ngClass]="isImageConfig? 'show' : 'hide'">
     <div class="filter-head">
       <label class="m-0">Image Configuration</label>
@@ -37,114 +36,95 @@
         <div class="col-sm-12 form-group">
           <label> Personalize </label>
           <div>
-            <label class="switch d-block">
-              <input type="checkbox" [checked]="isPersonalizeImage">
-              <span class="slider round"></span>
-            </label>
+            <span *ngIf="isPersonalizeImage">Yes</span>
+          <span *ngIf="!isPersonalizeImage">No</span>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="!isPersonalizeImage">
         <div class="col-sm-12 form-group">
           <label> Asset Library </label>
-          <select formControlName="imgAssetLibrary" class="form-control" [disableControl]="true">
-            <option *ngFor="let al of assetLibraryList" [value]="al.Identifier">{{al.Name}}</option>
-          </select>
+          <div>{{imgAssetLibraryName}}</div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="!isPersonalizeImage">
         <div class="col-sm-12 form-group">
           <label> Assets </label>
-          <select class="form-control" formControlName="imgAsset" [disableControl]="true">
-            <option *ngFor="let ast of assets" [value]="ast.Identifier">{{ast.Name}}</option>
-          </select>
+          <div>{{imgAssetName}}</div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="!isPersonalizeImage">
         <div class="col-sm-12">
           <label> URL </label>
-          <input type="text" class="form-control" [disableControl]="true" formControlName="imageUrl"/>
+          <div>{{imageSourceUrl}}</div>
         </div>
       </div>
     </div>
     <div class="filter-footer">
       <ul class="nav nav-toolbar">
-        <li class="nav-item width50" (click)="isImageConfig=!isImageConfig">
-          <button title="Close" id="btnCloseForm"
-                  class="btn-footer-fill btn-block rounded-0 height100">
+        <li class="nav-item width100" (click)="isImageConfig=!isImageConfig">
+          <button title="Close" id="btnCloseForm" class="btn-footer-fill btn-block rounded-0 height100">
             <span class="fa fa-close"></span>
           </button>
         </li>
       </ul>
     </div>
   </div>
-</form>
 
 <!--video config-->
-<form [formGroup]="VideoConfigForm" name="vdoConfigform">
-  <div class="form-popup side-popup width340" [ngClass]="isVideoConfig? 'show' : 'hide'">
-    <div class="filter-head">
-      <label class="m-0">Video Configuration</label>
-    </div>
-    <div class="filter-body stylescrollbar">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <label> Personalize </label>
-          <div>
-            <label class="switch d-block">
-              <input type="checkbox" [checked]="isPersonalize">
-              <span class="slider round"></span>
-            </label>
-          </div>
-        </div>
-        <div class="col-sm-6 form-group">
-          <label> Embedded </label>
-          <div>
-            <label class="switch d-block">
-              <input type="checkbox" [disabled]="true">
-              <span class="slider round" [ngClass]="!isPersonalize ? 'disabled-cursor bg-secondary':''"></span>
-            </label>
-          </div>
-        </div>
-      </div>
-      <div>
-        <div class="row" *ngIf="isEmbedded">
-          <div class="col-sm-12 form-group">
-            <label> URL </label>
-            <input type="text" class="form-control" [disableControl]="true" formControlName="vdoUrl"/>
-          </div>
-        </div>
-        <div class="row" *ngIf="!isEmbedded">
-          <div class="col-sm-12 form-group">
-            <label> Asset Library </label>
-            <select class="form-control" formControlName="vdoAssetLibrary" [disableControl]="true">
-              <option *ngFor="let al of assetLibraryList" [value]="al.Identifier">{{al.Name}}</option>
-            </select>
-          </div>
-        </div>
-        <div class="row" *ngIf="!isEmbedded">
-          <div class="col-sm-12 form-group">
-            <label> Assets </label>
-            <select class="form-control" [disableControl]="true" formControlName="vdoAsset">
-              <option *ngFor="let ast of assets" [value]="ast.Identifier">{{ast.Name}}</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      
-    </div>
-    <div class="filter-footer">
-      <ul class="nav nav-toolbar">
-        <li class="nav-item width50" (click)="isVideoConfig=!isVideoConfig">
-          <button  title="Close" id="btnCloseForm" 
-                  class="btn-footer-fill btn-block rounded-0 height100">
-            <span class="fa fa-close"></span>
-          </button>
-        </li>
-      </ul>
-    </div>
+<div class="form-popup side-popup width340" [ngClass]="isVideoConfig? 'show' : 'hide'">
+  <div class="filter-head">
+    <label class="m-0">Video Configuration</label>
   </div>
-</form>
+  <div class="filter-body stylescrollbar">
+    <div class="row">
+      <div class="col-sm-6 form-group">
+        <label> Personalize </label>
+        <div>
+          <span *ngIf="isPersonalize">Yes</span>
+          <span *ngIf="!isPersonalize">No</span>
+        </div>
+      </div>
+      <div class="col-sm-6 form-group">
+        <label> Embedded </label>
+        <div>
+          <span *ngIf="isEmbedded">Yes</span>
+          <span *ngIf="!isEmbedded">No</span>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="row" *ngIf="(isEmbedded && isPersonalize) || isEmbedded">
+        <div class="col-sm-12 form-group">
+          <label> URL </label>
+          <div>{{vdoSourceUrl}}</div>
+        </div>
+      </div>
+      <div class="row" *ngIf="!isEmbedded && !isPersonalize">
+        <div class="col-sm-12 form-group">
+          <label> Asset Library </label>
+          <div>{{vdoAssetLibraryName}}</div>
+        </div>
+      </div>
+      <div class="row" *ngIf="!isEmbedded && !isPersonalize">
+        <div class="col-sm-12 form-group">
+          <label> Assets </label>
+          <div>{{vdoAssetName}}</div>
+        </div>
+      </div>
+    </div>
+    
+  </div>
+  <div class="filter-footer">
+    <ul class="nav nav-toolbar">
+      <li class="nav-item width100" (click)="isVideoConfig=!isVideoConfig">
+        <button  title="Close" id="btnCloseForm" class="btn-footer-fill btn-block rounded-0 height100">
+          <span class="fa fa-close"></span>
+        </button>
+      </li>
+    </ul>
+  </div>
+</div>
 
 </div>
 
