--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -29,27 +29,31 @@
           <td mat-cell *matCellDef="let element">{{element.DisplayName}}</td>
         </ng-container>
         <ng-container matColumnDef="pagetype">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Page Type </th>
+          <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Page Type </th>
           <td mat-cell *matCellDef="let element">{{element.PageTypeName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="version">
-          <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Version </th>
-          <td mat-cell *matCellDef="let element">{{element.Version}} </td>
+          <th class="width8 ip-w-5" mat-header-cell *matHeaderCellDef> Version </th>
+          <td mat-cell *matCellDef="let element">V{{element.Version}}.0 </td>
         </ng-container>
         <ng-container matColumnDef="owner">
-          <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
+          <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
           <td mat-cell *matCellDef="let element">{{element.PageOwnerName}} </td>
         </ng-container>
+        <ng-container matColumnDef="publishedBy">
+          <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
+          <td mat-cell *matCellDef="let element">{{element.PagePublishedByUserName}} </td>
+        </ng-container>
         <ng-container matColumnDef="date">
-          <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef> Published Date </th>
+          <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef> Published Date </th>
           <td mat-cell *matCellDef="let element"> 
             <span *ngIf='element.PublishedOn!="0001-01-01T00:00:00"'>{{element.PublishedOn | date : "dd/MM/yyyy" }} </span>
             <span *ngIf='element.PublishedOn=="0001-01-01T00:00:00"'> - </span>
           </td>
         </ng-container>
         <ng-container matColumnDef="status">
-          <th class="width10 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+          <th class="width8 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
           <td mat-cell *matCellDef="let element">
             <span class="badge badge-primary p-1" *ngIf="element.Status=='New'">{{element.Status}}</span>
             <span class="badge badge-success p-1" *ngIf="element.Status=='Published'">{{element.Status}}</span>
@@ -57,13 +61,14 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
-          <th class="width20 ip-w-30" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+          <th class="width18 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
           <td mat-cell *matCellDef="let element">
             <div class="action-btns btn-tbl-action">
               <button type="button" title="View" id="btnView" (click)="navigationTodashboardDesigner(element)"><span class="fa fa-file-text-o"></span></button>
               <button type="button" title="Update" id="btnUpdate" *ngIf="element.Status!='Published'" (click)="navigationToDashboardDesignerEdit(element)"><span class="fa fa-pencil-square-o"></span></button>
               <button type="button" title="Delete" id="btnDelete" (click)="DeletePage(element)"><span class="fa fa-trash-o"></span></button>
               <button type="button" title="Publish" id="btnPublish" *ngIf="element.Status!='Published'" (click)="PublishPage(element)"><span class="fa fa-share"></span></button>
+              <button type="button" title="Clone" id="btnClone" *ngIf="element.Status!='New'" (click)="ClonePage(element)"><span class="fa fa-clone"></span></button>
               <button type="button" title="Preview" id="btnPreview" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye"></span></button>
             </div>
           </td>
@@ -128,6 +133,9 @@
               <i class="fa fa-calendar"></i>
             </span>
             <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterDateError">
+            Start date should not be greater than End date.
           </div>
         </div>
         <div class="form-group">
