Asset Setting Screen Added

--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -70,6 +70,9 @@
       <li [ngClass]="(URL=='/analytics')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToAnalytics()">
         <a> <span class='nav-icon icon-rp-yield1' title="Analytics"> </span> <span class='nav-title'>Analytics</span> </a>
       </li>
+      <li [ngClass]="(URL=='/settings')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToSettings()">
+        <a> <span class='nav-icon icon-rp-yield1' title="Settings"> </span> <span class='nav-title'>Asset Setting</span> </a>
+      </li>
 
 
     </ul>
