--- a/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
@@ -51,12 +51,12 @@
       <div class="d-flex justify-content-center mb-0">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage"  (page)="handlePage($event)">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
 
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)" matSortActive="name" matSortDirection="asc" matSortDisableClear>
         <!-- Position Column -->
         <ng-container matColumnDef="name">
           <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -96,7 +96,9 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
       </table>
+      <div style="text-align:center" *ngIf="dataSource.length === 0">No data to display</div>
     </div>
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
