--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="float-right pr-2 d-md-block d-none">
-    <button class="btn-footer-fill mt-2 mr-2" id="btnPrev" title="Previous" [disabled]="isMasterSaveBtnDisabled" (click)="prevBtnClicked()"> Prev</button>
+    <button class="btn-footer-fill mt-2 mr-2" id="btnPrev" title="Previous" *ngIf="!pageEditModeOn" [disabled]="isMasterSaveBtnDisabled" (click)="prevBtnClicked()"> Prev</button>
     <button class="btn-footer-fill mt-2 mr-2" id="btnSave" title="Save" [disabled]="isMasterSaveBtnDisabled" (click)="OnSaveBtnClicked()"> Save</button>
     <button class="btn-footer-outline mt-2" id="btnCancel" title="Cancel" (click)="backClicked()"> Cancel </button>
   </div>
@@ -123,6 +123,12 @@
             </div>
           </div>
         </div>
+        <div class="row" *ngIf="!isPersonalizeImage" style="margin-top: 40px;">
+          <div class="col-sm-12 text-center">
+              <img src="assets/images/icon-image.png" *ngIf="imgAssetId==0" class="width70">
+              <img src="assets/images/ImageWidget.PNG" *ngIf="imgAssetId!=0" class="width70"> 
+          </div>
+        </div>
       </div>
       <div class="filter-footer">
         <ul class="nav nav-toolbar">
@@ -163,7 +169,7 @@
             <div>
               <label class="switch d-block">
                 <input type="checkbox" (change)="isEmbedded=!isEmbedded">
-                <span class="slider round" [ngClass]="!isPersonalize ? 'disabled-cursor bg-secondary':''"></span>
+                <span class="slider round"></span>
               </label>
             </div>
           </div>
@@ -209,6 +215,14 @@
                   <li class="text-danger">Please select asset</li>
                 </ul>
               </div>
+            </div>
+          </div>
+          <div class="row" *ngIf="!isEmbedded && !isPersonalize" style="margin-top: 40px;">
+            <div class="col-sm-12 text-center">
+              <img src="assets/images/video-icon.png" class="img-fluid width50" *ngIf="vdoAssetId == 0"/>
+              <video controls *ngIf="vdoAssetId != 0" style="height: 200px;width: 80%;">
+                <source src="assets/images/SampleVideo.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
         </div>
