--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -34,7 +34,7 @@
         </ng-container>
 
         <ng-container matColumnDef="version">
-          <th class="width8 ip-w-5" mat-header-cell *matHeaderCellDef> Version </th>
+          <th class="width8 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
           <td mat-cell *matCellDef="let element">V{{element.Version}}.0 </td>
         </ng-container>
         <ng-container matColumnDef="owner">
@@ -43,7 +43,10 @@
         </ng-container>
         <ng-container matColumnDef="publishedBy">
           <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
-          <td mat-cell *matCellDef="let element">{{element.PagePublishedByUserName}} </td>
+          <td mat-cell *matCellDef="let element">
+            <span *ngIf='element.PagePublishedByUserName!=""'>{{element.PagePublishedByUserName}} </span>
+            <span *ngIf='element.PagePublishedByUserName==""'> - </span>
+          </td>
         </ng-container>
         <ng-container matColumnDef="date">
           <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef> Published Date </th>
@@ -121,7 +124,6 @@
           <select class="form-control" formControlName="filterStatus" id="filterStatus">
             <option value="0" selected> Select</option>
             <option value="New">New</option>
-            <option value="In Process">In Process</option>
             <option value="Published">Published</option>
           </select>
         </div>
